--- a/contato.html
+++ b/contato.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html>
+  <head>
+<meta charset="UTFF-8">
+<title>Contato - Barbearia Alura</title>
+    
+<link rel="stylesheet" href="reset.cs">
+<link rel="stylesheet" href="style.cs">
+    </head>
+  <body>
+    <header>
+      <div class="caixa">
+        <h1><img src="logo.png"></h1>
 
+        <nav>
+          <ul> 
+          </ul>
+        </nav>
+    </header>
+  </body>
+</html>
+
+
+    
