--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Produtos - Barbearia Alura</title>
+<title>Produtos - kassy </title>
 <link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="style.css">
 </head>
@@ -23,7 +23,7 @@
 <ul class="produtos">
 <li>
 <h2>Cabelo</h2>
-<img src="cabelo.jpg">
+<img src="">
 <p class="produto-descricao">Na tesoura ou máquina, como o cliente
 
 preferir</p>
