--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
 <div class="caixa">
-<h1><img src="logo.png"></h1>
+<h1><img src="design-sem-nome-15-_1666612180.png"></h1>
 <nav>
 <ul>
 <li><a href="index.html">Home</a></li>
