--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <ul class="produtos">
 <li>
 <h2>Cabelo</h2>
-<img src="moda-coreana-saia-bege-camiseta-gola-alta-branco-casaco-de-la-cinza.jpg">
+<img src="">
 <p class="produto-descricao">Na tesoura ou máquina, como o cliente
 
 preferir</p>
