--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 <li>
 <h2>Cabelo</h2>
 <img src="">
-<p class="produto-descricao">Na tesoura ou máquina, como o cliente
+<p class="produto-descricao"> 
 
 preferir</p>
 
-<p class="produto-preco">R$ 25,00</p>
+<p class="produto-preco">...
 </li>
 <li>
-<h2>Barba</h2>
-<img src="barba.jpg">
+<h2>Moda minina</h2>
+<img src="">
 <p class="produto-descricao">Corte e desenho profissional de barba</p>
 <p class="produto-preco">R$ 18,00</p>
 </li>
