--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <ul class="produtos">
 <li>
 <h2>Cabelo</h2>
-<img src="">
+<img src="/S44b3478a870742d29d57c7c0bc053b9d0.jpg_640x640Q90.jpg_.webp
+">
 <p class="produto-descricao"> 
 
 preferir</p>
