--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 <main>
 <ul class="produtos">
 <li>
-<h2>Cabelo</h2>
-<img src="/S44b3478a870742d29d57c7c0bc053b9d0.jpg_640x640Q90.jpg_.webp
-">
+<h2>Moda minina</h2>
+<img src="">
 <p class="produto-descricao"> 
 
 preferir</p>
@@ -32,16 +31,16 @@ preferir</p>
 <p class="produto-preco">...
 </li>
 <li>
-<h2>Moda minina</h2>
+<h2>Moda maculina</h2>
 <img src="">
-<p class="produto-descricao">Corte e desenho profissional de barba</p>
-<p class="produto-preco">R$ 18,00</p>
+<p class="produto-descrisao</p>
+<p class="produto-preco">...</p>
 </li>
 <li>
-<h2>Cabelo + Barba</h2>
+<h2>sapatos</h2>
 <img src="cabelo+barba.jpg">
-<p class="produto-descricao">Pacote completo de cabelo e barba</p>
-<p class="produto-preco">R$ 35,00</p>
+<p class="produto-descricao"></p>
+<p class="produto-preco"></p>
 </li>
 </ul>
 </main>
