--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@ preferir</p>
 </li>
 <li>
 <h2>Moda maculina</h2>
-<img src="">
+<img src="images.jpeg">
 <p class="produto-descrisao</p>
 <p class="produto-preco">...</p>
 </li>
 <li>
 <h2>sapatos</h2>
-<img src="cabelo+barba.jpg">
+<img src="">
 <p class="produto-descricao"></p>
 <p class="produto-preco"></p>
 </li>
