--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@ preferir</p>
 </li>
 <li>
 <h2>sapatos</h2>
-<img src="">
+<img src="42df8704c086576b80268496ebdd5282_tn.jpeg
+">
 <p class="produto-descricao"></p>
 <p class="produto-preco"></p>
 </li>
